@@ -20,6 +20,7 @@
 * Removed QStringList occurrences.
 * Removed unused include files.
 * Improved Console to use mutex locked std::cout output.
+* Moved Console code from header to source file.
 
 SphereSim 3.0.2:
 * Fixed Viewer linking.
